# PlaTwoButCooler

./: CMakeLists.txt  login.ui  loginpage.ui  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  registerwindow.cpp  registerwindow.ui  resources.qrc
games/: DotsAndBoxes.cpp  DotsAndBoxes.h  Game.h
games/DotsAndBoxes/: Box.h  DotsAndBoxes.h  Line.h
models/: GameResult.h  User.h
